--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
     <h1>Jackie's Portfolio</h1>
-    <img src="ProfilePic.jpg" />
+    <img src="ProfilePic.jpg"
+        style="width:752.5px;height: 937.5px;">
 </html>
