--- a/index.html
+++ b/index.html
@@ -1,5 +1,306 @@
-<html>
-    <h1>Jackie's Test Portfolio</h1>
-    <img src="ProfilePic.jpg"
-        style="width:752.5px;height: 937.5px;">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>Jacqueline's Portfolio</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- Font Awesome icons (free version)-->
+    <script
+      src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Simple line icons-->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css"
+      rel="stylesheet"
+    />
+    <!-- Google fonts-->
+    <link
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="css/styles.css" rel="stylesheet" />
+  </head>
+  <body id="page-top">
+    <!-- Navigation-->
+    <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
+    <nav id="sidebar-wrapper">
+      <ul class="sidebar-nav">
+        <li class="sidebar-brand"><a href="#page-top">Menu</a></li>
+        <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
+        <li class="sidebar-nav-item"><a href="#about">About</a></li>
+        <!-- <li class="sidebar-nav-item"><a href="#services">Services</a></li> -->
+        <li class="sidebar-nav-item"><a href="#portfolio">Portfolio</a></li>
+        <li class="sidebar-nav-item"><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+
+    <!-- Header-->
+    <header class="masthead d-flex align-items-center">
+      <div class="container px-4 px-lg-5 text-center">
+        <h1><img class="pic" src="assets/img/Pic.jpg" /></h1>
+        <h1 class="box"></h1>
+        <h1 class="mb-1">Jacqueline's Portfolio</h1>
+        <h3 class="mb-5"><em>Full-Stack Developer</em></h3>
+        <a class="btn btn-primary btn-xl" href="#about">Let's Get Started!</a>
+      </div>
+    </header>
+
+    <!-- About-->
+    <section class="content-section bg-primary text-white" id="about">
+      <div class="container px-4 px-lg-5 text-center">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+          <div class="col-lg-6">
+            <h2>Meet the Coder!</h2>
+            <p class="lead">
+              Hello, my name is Jacqueline Park. Recently, I decided to make the
+              career switch into coding and technology. I'm currently working
+              towards my certificate from the MIT Professional Development
+              program with a focus in MERN Full-Stack Development. As of right
+              now, I'm most familiar with HTML, CSS and JavaScript. Going
+              forward I would like to use my love for helping others with my
+              enjoyment for problem solving and my passion for coding to create
+              websites and apps that will make the world a little more
+              accessible for everyone!
+              <!-- <a href="https://unsplash.com/">Unsplash</a> -->
+            </p>
+          </div>
+          <div class="col-lg-5">
+            <p class="lead">
+              <iframe
+                width="700"
+                height="700"
+                src="https://youtu.be/embed/kLtimoXm-Wo"
+              ></iframe>
+            </p>
+          </div>
+          <div class="col-lg-5">
+            <a class="btn btn-dark btn-xl" href="#portfolio">Portfolio</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Services-->
+    <!-- <section
+      class="content-section bg-primary text-white text-center"
+      id="services"
+    >
+      <div class="container px-4 px-lg-5">
+        <div class="content-section-heading">
+          <h3 class="text-secondary mb-0">Services</h3>
+          <h2 class="mb-5">What We Offer</h2>
+        </div>
+        <div class="row gx-4 gx-lg-5">
+          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+            <span class="service-icon rounded-circle mx-auto mb-3"
+              ><i class="icon-screen-smartphone"></i
+            ></span>
+            <h4><strong>Responsive</strong></h4>
+            <p class="text-faded mb-0">Looks great on any screen size!</p>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+            <span class="service-icon rounded-circle mx-auto mb-3"
+              ><i class="icon-pencil"></i
+            ></span>
+            <h4><strong>Redesigned</strong></h4>
+            <p class="text-faded mb-0">Freshly redesigned for Bootstrap 5.</p>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
+            <span class="service-icon rounded-circle mx-auto mb-3"
+              ><i class="icon-like"></i
+            ></span>
+            <h4><strong>Favorited</strong></h4>
+            <p class="text-faded mb-0">
+              Millions of users
+              <i class="fas fa-heart"></i>
+              Start Bootstrap!
+            </p>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <span class="service-icon rounded-circle mx-auto mb-3"
+              ><i class="icon-mustache"></i
+            ></span>
+            <h4><strong>Question</strong></h4>
+            <p class="text-faded mb-0">I mustache you a question...</p>
+          </div>
+        </div>
+      </div>
+    </section> -->
+
+    <!-- Callout-->
+    <!-- <section class="callout">
+      <div class="container px-4 px-lg-5 text-center">
+        <h2 class="mx-auto mb-5">
+          Welcome to
+          <em>your</em>
+          next website!
+        </h2>
+        <a
+          class="btn btn-primary btn-xl"
+          href="#!"
+          >Download Now!</a
+        >
+      </div>
+    </section> -->
+
+    <!-- Portfolio-->
+    <section class="content-section" id="portfolio">
+      <div class="container px-4 px-lg-5">
+        <div class="content-section-heading text-center">
+          <h3 class="text-secondary mb-0">Portfolio</h3>
+          <h2 class="mb-5">Recent Projects</h2>
+        </div>
+        <div class="row gx-0">
+          <div class="col-lg-4">
+            <a
+              class="portfolio-item"
+              href="https://jacquelinepark.github.io/PacMen/"
+              target="_blank"
+            >
+              <div class="caption">
+                <div class="caption-content">
+                  <div class="h2">Pacmen</div>
+                  <p class="mb-0">
+                    A website that create PacMen and move them around the page!
+                  </p>
+                </div>
+              </div>
+              <img class="img-fluid" src="assets/img/Pacmen.png" alt="..." />
+            </a>
+          </div>
+          <div class="col-lg-4">
+            <a
+              class="portfolio-item"
+              href="https://jacquelinepark.github.io/Eyes/"
+              target="_blank"
+            >
+              <div class="caption">
+                <div class="caption-content">
+                  <div class="h2">Eyes</div>
+                  <p class="mb-0">
+                    A website where a pair of eyes follow your mouse movement!
+                  </p>
+                </div>
+              </div>
+              <img class="img-fluid" src="assets/img/Eyes.png" alt="..." />
+            </a>
+          </div>
+          <div class="col-lg-4">
+            <a
+              class="portfolio-item"
+              href="https://jacquelinepark.github.io/BusTracker/"
+              target="_blank"
+            >
+              <div class="caption">
+                <div class="caption-content">
+                  <div class="h2">Bus Tracker</div>
+                  <p class="mb-0">
+                    A website that tracks buses from MIT to Harvard in
+                    real-time!
+                  </p>
+                </div>
+              </div>
+              <img
+                class="img-fluid"
+                src="assets/img/BusTracker.png"
+                alt="..."
+              />
+            </a>
+          </div>
+          <!-- <div class="col-lg-6">
+            <a class="portfolio-item" href="#!">
+              <div class="caption">
+                <div class="caption-content">
+                  <div class="h2">Workspace</div>
+                  <p class="mb-0">
+                    A yellow workspace with some scissors, pencils, and other
+                    objects.
+                  </p>
+                </div>
+              </div>
+              <img
+                class="img-fluid"
+                src="assets/img/portfolio-4.jpg"
+                alt="..."
+              />
+            </a>
+          </div> -->
+        </div>
+      </div>
+    </section>
+
+    <!-- Call to Action-->
+    <!-- <section class="content-section bg-primary text-white">
+      <div class="container px-4 px-lg-5 text-center">
+        <h2 class="mb-4">The buttons below are impossible to resist...</h2>
+        <a class="btn btn-xl btn-light me-4" href="#!">Click Me!</a>
+        <a class="btn btn-xl btn-dark" href="#!">Look at Me!</a>
+      </div>
+    </section> -->
+
+    <!-- Map-->
+    <section class="content-section bg-primary text-white" id="contact">
+      <div class="container px-4 px-lg-5 text-center">
+        <h2 class="mb-4">Contact</h2>
+        <p>Please email me at jpark8214@gmail.com!</p>
+        <!-- <iframe
+        src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"
+      ></iframe>
+      <br />
+      <small
+        ><a
+          href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"
+        ></a
+      ></small> -->
+      </div>
+    </section>
+
+    <!-- Footer-->
+    <footer class="footer text-center">
+      <div class="container px-4 px-lg-5">
+        <ul class="list-inline mb-5">
+          <!-- <li class="list-inline-item">
+            <a class="social-link rounded-circle text-white mr-3" href="#!"
+              ><i class="icon-social-facebook"></i
+            ></a>
+          </li> -->
+          <li class="list-inline-item">
+            <a
+              class="social-link rounded-circle text-white mr-3"
+              href="https://www.linkedin.com/in/jacqupark"
+              target="_blank"
+              ><i class="icon-social-linkedin"></i
+            ></a>
+          </li>
+          <li class="list-inline-item">
+            <a
+              class="social-link rounded-circle text-white"
+              href="https://github.com/JacquelinePark"
+              target="_blank"
+              ><i class="icon-social-github"></i
+            ></a>
+          </li>
+        </ul>
+        <p class="text-muted small mb-0">Copyright &copy; Your Website 2023</p>
+      </div>
+    </footer>
+    <!-- Scroll to Top Button-->
+    <a class="scroll-to-top rounded" href="#page-top"
+      ><i class="fas fa-angle-up"></i
+    ></a>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
+  </body>
 </html>
