--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <iframe
                 width="700"
                 height="700"
-                src="https://youtu.be/embed/kLtimoXm-Wo"
+                src="https://youtu.be/kLtimoXm-Wo"
               ></iframe>
             </p>
           </div>
