--- a/index.html
+++ b/index.html
@@ -77,9 +77,13 @@
           <div class="col-lg-5">
             <p class="lead">
               <iframe
-                width="700"
-                height="700"
-                src="https://youtu.be/kLtimoXm-Wo"
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/kLtimoXm-Wo?si=lFrxlEkw97-8j19O"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
               ></iframe>
             </p>
           </div>
